2003-02-18  Richard Frith-Macdonald <rfm@gnu.org>

	* NSObject.m: ([+instancesRespondToSelector:]),([-respondsToSelector])
	Return NO when given a null selector unless in MacOS-X compatibility
	mode.  rewritten from patch by Willem Rein Oudshoorn.

2003-02-16  Adam Fedor  <fedor@gnu.org>

	* Version 1.5.2
	* Documentation: Update.

	* Source/GSFFIInvocation.m (GSFFIInvocationCallback): Autorelease
	and invalidate the return value object before returning.

2003-02-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSDictionary.m: ([-isEqualToDictionary:]) implement optimised
	version which does not need to create a key enumerator.
	* Source/GSArray.m: ditto
	* Source/GSSet.m: similar minor optimisations.

2003-02-15 15:53  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSRunLoop.m (-performSelector:target:argument:order:modes:):
	Order the performers correctly (lower order values first). Correct
	the documentation.

2003-02-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m: Fix memory leak when making absolute
	timezone for offset 0.

2003-02-11  Tom Koelman <tkoelman@xs4all.nl>

	* Source/NSTask.m: Make arguments into windows quoted strings for
	mingw.  Adjustments to conform to GNUstep style and use static
	functions to avoid adding methods by RFM.

2003-02-11  Adam Fedor  <fedor@gnu.org>

	* configure (LDFLAGS): Remove extra spaces that cause problems
	on Darwin/gcc

i2003-02-11  Willem Rein Oudshoorn  <woudshoo@xs4all.nl>

	* Headers/Foundation/NSFileManager.h: Added a little bit to the
	* documentation of the NSFileManagerHandler protocol.
	(some documentation markup fixes by RFM also)
	* Source/NSFileManager.m ([NSFileManager -copyPath:toPath:handler:]): 
	use new private methods to cope with handlers that do not implement
	the informal protocol.  Pass more information to the handler in case
	of an error.
	([NSFileManager -removeFileAtPath:handler:]):  see above
	([NSFileManager -movePath:toPath:handler:]): see above